2005-08-23  Phil Edwards  <phil@codesourcery.com>

	* configure.tgt (*-*-vxworks):  Match vxworks* instead.

2005-08-22  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (object_64bit): New.
	(i386_target_format): Initialize it.
	(output_disp): Use object_64bit for relocation type determination.
	(output_imm): Likewise.
	(i386_validate_fix): Likewise.
	(tc_gen_reloc): Likewise.
	(lex_got): Likewise. Remove static mode_name. Change array size
	of gotrel's rel field, and adjust its initializer. Adjust diagnostic.
	(x86_cons): Use object_64bit for deciding whether quad fields can
	have relocations.

2005-08-18  Christian Groessler  <chris@groessler.org>

	* config/tc-h8300.h: Remove TC_RELOC_MANGLE/tc_reloc_mangle.
	* config/tc-mcore.h: Likewise.
	* config/tc-z8k.h: Likewise.
	* config/tc-z8k.c: Likewise.
	* config/tc-sh.h: Remove TC_RELOC_MANGLE and
	sh_coff_reloc_mangle declaration.
	* config/tc-sh.c: (md_apply_fix): Fix comment for case
	BFD_RELOC_SH_USES.

2005-08-18  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* config/tc-sh64.c (sh64_target_format): Check preset_target_arch
	to confirm that no ISA is specified.

2005-08-18  Nick Clifton  <nickc@redhat.com>

	* write.c (relax_segment): Count the number of frags being
	processed and use this to compute a maximum limit on the number of
	iterations that will be allowed when attempting to relax the
	segment.

2005-08-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* config/obj-coff.c (obj_coff_weak): Set auxiliary record
	of NT weak externals to IMAGE_WEAK_EXTERN_SEARCH_NOLIBRARY.

2005-08-16  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_set_cpu): Don't select 64-bit based on
	default cpu.

2005-08-15  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_t_mov_cmp): Fix encoding of i16-bit conditional
	instructions.
	(do_t_mvn_tst, do_t_neg, do_t_shift): Ditto.

2005-08-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* config/tc-ppc.c (parse_cpu): Add -me300 support.