@@ -1,3 +1,8 @@
+2005-08-23  Alan Modra  <amodra@bigpond.net.au>
+
+	PR 1036
+	* config/tc-ppc.c (ppc_symbol_chars): Add '%' and '['.
+
 2005-08-23  Phil Edwards  <phil@codesourcery.com>
 
 	* configure.tgt (*-*-vxworks):  Match vxworks* instead.
